tests/bad/bad025.j
.class public bad025
.super java/lang/Object
   .method <init>()V
      .limit stack 1
      .limit locals 1
      aload_0
      invokespecial java/lang/Object/<init>()V
      return
   .end method
   .method public static main([Ljava/lang/String;)V
      .limit stack 1
      .limit locals 1
      return
   .end method